# snp

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION_VERIFICATION.md  README.md  README_COVERAGE.md  RELEASE.md  SNP_IMPROVEMENT_ANALYSIS.md  VERSIONING.md  build.rs  clippy.toml  custom-config.yaml  file1.py  file2.rs  test-config.yaml  test_push.txt
.github/: CODEOWNERS  DEPENDABOT_SETUP.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  language_plugin.yml  performance_issue.yml  security.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
.pre-commit/: README  db.db
benches/: arena_benchmark.rs  cache_effectiveness_benchmark.rs  cache_performance_benchmark.rs  cli_benchmark.rs  config_benchmark.rs  core_benchmark.rs  lock_free_benchmark.rs  logging_benchmark.rs  regex_batch_benchmark.rs
scripts/: coverage_ci.sh  measure_coverage.sh  quick_coverage.sh  release.sh  verify-release.sh  version.sh
scripts/install/: install.ps1  install.sh  uninstall.sh
src/: cache.rs  classification.rs  cli.rs  concurrency.rs  config.rs  core.rs  enhanced_regex_processor.rs  error.rs  execution.rs  file_change_detector.rs  file_lock.rs  filesystem.rs  git.rs  hook_chaining.rs  install.rs  lib.rs  lock_free_cache.rs  lock_free_scheduler.rs  logging.rs  main.rs  migration.rs  negative_cache.rs  output.rs  pooled_git.rs  pooled_language.rs  process.rs  recovery.rs  regex_processor.rs  resource_pool.rs  resource_pool_manager.rs  storage.rs  user_output.rs  validation.rs
src/commands/: autoupdate.rs  clean.rs  hook_impl.rs  init_templatedir.rs  migrate_config.rs  mod.rs  run.rs  sample_config.rs  try_repo.rs
src/events/: bus.rs  event.rs  handler.rs  metrics.rs  mod.rs
src/language/: base.rs  dependency.rs  docker.rs  environment.rs  executor.rs  golang.rs  mod.rs  nodejs.rs  python.rs  registry.rs  ruby.rs  rust.rs  script.rs  system.rs  traits.rs
tests/: arena_allocation_tests.rs  autoupdate_tests.rs  classification_tests.rs  clean_gc_tests.rs  cli_edge_case_tests.rs  comprehensive_git_tests.rs  concurrency_tests.rs  cross_platform_tests.rs  dependency_resolution_tests.rs  docker_language_tests.rs  error_handling_tests.rs  event_config_tests.rs  event_system_tests.rs  file_locking_tests.rs  file_modification_detection_tests.rs  filesystem_tests.rs  git_operations_tests.rs  golang_language_tests.rs  hook_behavior_tests.rs  hook_chaining_tests.rs  hook_impl_tests.rs  hook_status_display_bug_tests.rs  incremental_detection_tests.rs  init_templatedir_tests.rs  install_uninstall_tests.rs  integration_error_scenarios_tests.rs  integration_tests.rs  language_trait_tests.rs  lock_free_tests.rs  logging_tests.rs  migrate_config_tests.rs  migration_comprehensive_tests.rs  multi_tier_cache_tests.rs  negative_cache_tests.rs  nodejs_language_tests.rs  performance_tests.rs  pre_push_hook_tests.rs  process_tests.rs  python_language_tests.rs  race_condition_fix_tests.rs  (+17 more)
wiki-content/: Home.md
