[package]
name = "snp"
version = "0.1.0"
edition = "2021"
authors = ["SNP Contributors"]
description = "SNP (Shell Not Pass) - A fast, reliable pre-commit framework written in Rust"
repository = "https://github.com/devops247-online/snp"
license = "MIT"
keywords = ["git", "hooks", "pre-commit", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "snp"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }
clap_complete = "4.4"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Graph algorithms for hook chaining
petgraph = "0.6"
daggy = "0.9"
async-trait = "0.1"

# Binary serialization for hook communication
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Git operations
git2 = { version = "0.20", features = ["vendored-openssl"] }

# File system and utilities
regex = "1.10"
regex-syntax = "0.8"
walkdir = "2.4"
tempfile = "3.8"
ignore = "0.4"
memmap2 = "0.9"
similar = "2.3"

# Regex processing dependencies
aho-corasick = "1.1"
memchr = "2.6"
fancy-regex = "0.15"
regex-automata = "0.4"

# Performance optimization
lru = "0.16"
parking_lot = "0.12"

# Language trait architecture dependencies
libloading = "0.8"     # Dynamic library loading
inventory = "0.3"      # Plugin registration and discovery
semver = "1.0"         # Semantic version parsing and comparison
dashmap = "5.5"        # Concurrent hash map for plugin registry
toml = "0.9"           # Configuration file format

# File classification dependencies
glob = "0.3"
globset = "0.4"
mime_guess = "2.0"
tree_magic_mini = "3.0"
encoding_rs = "0.8"
infer = "0.19"

# Process management
which = "8.0"
futures = "0.3"
dirs = "6.0"          # Home directory discovery for CARGO_HOME/RUSTUP_HOME

# Python language support dependencies
pep440_rs = "0.6"        # PEP 440 version specifier parsing

# Concurrency and performance
crossbeam = "0.8"
rayon = "1.7"
num_cpus = "1.16"

# System monitoring
sysinfo = "0.30"
whoami = "1.4"
uuid = { version = "1.6", features = ["v4"] }

# Terminal detection
is-terminal = "0.4"

# File locking and monitoring
fs2 = "0.4"
notify = "8.1"
filetime = "0.2"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for API requests
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2.4"
urlencoding = "2.1"

# Database storage
rusqlite = { version = "0.37", features = ["bundled"] }

# Schema validation dependencies
validator = "0.20"
jsonschema = "0.30"
ahash = "0.8"
once_cell = "1.19"

# Platform-specific process management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process", "signal", "fs"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winbase", "handleapi", "synchapi", "fileapi"] }

[dev-dependencies]
# Testing utilities
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true

[[bench]]
name = "cli_benchmark"
harness = false

[[bench]]
name = "config_benchmark"
harness = false

[[bench]]
name = "core_benchmark"
harness = false

[[bench]]
name = "logging_benchmark"
harness = false
